# CrabQuant

./: .gitignore  Cargo.toml  README.md  output.txt  random_sleep.txt  sample_output_day.txt  sample_output_day_2.txt  sample_result.txt  timestamp_order.txt
data/: AAPL_DAY_10Y.csv  AMD_DAY_10Y.csv  AMZN_DAY_10Y.csv  BTC_1min_sample.csv  CSCO_DAY_10Y.csv  META_DAY_10Y.csv  MSFT_DAY_10Y.csv  NFLX_DAY_10Y.csv  QCOM_DAY_10Y.csv  SBUX_DAY_10Y.csv  SPY_1day_sample.csv  SPY_1min_sample.csv  SPY_1min_sample_double.csv  TSLA_1min_2W.csv  TSLA_DAY_10Y.csv  TSLA_DAY_80D.csv
proposal/: PROPOSAL_base64embedded.md  test.md
src/: data_analyzer.rs  event_manager.rs  events.rs  main.rs  market_data_feeder.rs  market_data_feeder_stock.rs  mock_exchange.rs  portfolio_manager.rs  shared_structures.rs  strategy.rs  strategy_fire_and_drop.rs  strategy_helper.rs  strategy_limit_price.rs  strategy_manager.rs  util.rs
src/strategies/: mod.rs  moving_average_crossover.rs  strategy_fire_and_drop.rs  strategy_helper.rs  strategy_limit_price.rs
