[package]
name = "Crab"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
csv = "1.3.1"
rand = "0.8.5"
lazy_static = "1.5.0"
plotters = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
simplelog = { version = "^0.12.2", features = ["paris"] }
chrono = "0.4.39"

[features]
default = []
order_test = []
timestamp_test = []
random_sleep_test = []
